updated to zip and date
go

--- a/website/index.html
+++ b/website/index.html
@@ -18,8 +18,8 @@
     </div>
 
     <div class="input-data">
-        <input type="text" class="inputs" id="city-input" placeholder="Enter City" required="">
-        <input type="text" class="inputs" id="feeling-input" placeholder="How does the Weather Feel?" required="">
+        <input type="text" class="inputs" id="zip" placeholder="Enter City" required="">
+        <input type="text" class="inputs" id="feeling" placeholder="How does the Weather Feel?" required="">
         <button id="generate">Generate</button>
     </div>
 
